--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -14,6 +14,7 @@
 
 .gpt3__navbar-links_logo {
     margin-right: 2rem;
+    
 }
 
 .gpt3__navbar-links_logo img {
@@ -32,13 +33,13 @@
     align-items: center;
 }
 
-.gpt3__navbar-lins_container p,
+.gpt3__navbar-links_container p,
 .gpt3__navbar-sign p,
 .gpt3__navbar-menu_container p {
     color: #fff;
     font-family: var(--font-family);
     font-weight: 500;
-    font-size: 500;
+    font-size: 18px;
     line-height: 25px;
     text-transform: capitalize;
 
@@ -49,6 +50,21 @@
     line-height: 25px;
     /* identical to box height */
 
-    margin: 0 1rem;
+    margin: 0 1.5rem;
+    cursor: pointer;
+}
+
+.gpt3__navbar-sign button,
+.gpt3__navbar-menu_container button {
+    padding: 0.5rem 1.5rem;
+    color: #fff;
+    background: #FF4820;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 5px;
+    border: 0;
+    outline: none;
     cursor: pointer;
 }
